<resources>
    <string name="app_name">mi contacto</string>
    <string name="title_profile">Profile</string>
    <string name="title_mycontact">My Contact</string>
    <string name="title_friend_list">Friends List</string>
    <string name="tentang_aplikasi">Tujuan Pembuatan Aplikasi</string>

    <string name="application">Application</string>
    <string name="creator">Creator</string>
    <string name="logo">logo</string>
    <string name="versi_1_0">Versi 1.0</string>
    <string name="about_micontacto">micontacto is an application that contains a list of friends</string>
    <string name="about_creator">Ma\'sum Abdul Matin</string>
    <string name="about_nim_creator">10116342</string>
    <string name="about_class_creator">IF - 8</string>
    <string name="about_univ_creator">UNIVERSITAS KOMPUTER INDONESIA</string>
    <string name="about_descrip_creator">I am a student at Unikom. I hope that next year I graduate from unikom and get a big income. I\'m very happy to try something new</string>
    <string name="title_more">More</string>
    <string name="welcome_you_logged_in_as">you logged in as</string>
    <string name="sign_out">sign out</string>
    <string name="about_us">About us</string>
    <string name="login">LOGIN</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login_failed_msg">Login failed, Username or password is wrong !</string>
    <string name="don_t_have_an_account">Don\'t have an account? Sign up</string>
    <string name="sign_up_failed_msg">Sign up failed, Username already used !</string>
    <string name="sign_up">sign up</string>
    <string name="name">name</string>
    <string name="name_creator">Ma\'sum Abdul Matin</string>
    <string name="title_my_contact">MY CONTACT</string>
    <string name="phone">Phone</string>
    <string name="number_creator">+62 8953 3593 1379</string>
    <string name="email">Email</string>
    <string name="email_creator">child.masum@gmail.com</string>
    <string name="instagram">Instagram</string>
    <string name="insta_creator">abdul.gallery</string>
    <string name="twitter">Twitter</string>
    <string name="twitter_creator">ShinNear18</string>
    <string name="facebook">Facebook</string>
    <string name="title_friends_list">Friends List</string>
    <string name="title_friends_list_detail">Friends List Detail</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="title_add_friend">add friend</string>
    <string name="nim">nim</string>
    <string name="class_">class</string>
    <string name="contact">Contact</string>
    <string name="save">save</string>
    <string name="edit_friend">Edit Friend</string>
    <string name="title_about_us">about us</string>
    <string name="social_media">social media</string>
    <string name="personal_data">Personal Data</string>
    <string name="university_or_school">University or School</string>
    <string name="facebook_creator">ma\'sum abdul m</string>
    <string name="mi_contacto_info">mi contacto info</string>
</resources>
