<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@color/colorMuted">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".LoginActivity">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logocontacto" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/item_edit_text"
            android:hint="@string/username"
            android:inputType="text"
            android:textSize="15sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/item_edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="15sp"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/tvWrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:text="@string/login_failed_msg"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/item_button"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/don_t_have_an_account"
            android:textAllCaps="false"
            android:textColor="@color/design_default_color_primary_dark" />



    </LinearLayout>

</ScrollView>