<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarAboutus"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/item_toolbar"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_about_us"
                android:textColor="@android:color/white"
                android:textSize="@dimen/toolbarText" />

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/toolbarAboutus"
            android:gravity="center">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="221dp"
            android:layout_height="220dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/logocontacto" />

        <TextView
            android:id="@+id/tvMiContacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_below="@+id/imgLogo"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/tvVersi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_below="@+id/tvMiContacto"
            android:text="@string/versi_1_0"/>

        <TextView
            android:id="@+id/tvDescript"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="6dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:layout_below="@+id/tvVersi"
            android:gravity="center"
            android:text="@string/about_micontacto"/>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>