<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".fragment.SettingFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarSetting"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/item_toolbar"
        app:layout_scrollFlags="scroll|enterAlways|snap"
        app:popupTheme="@style/AppTheme.AppBarOverlay">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_more"
            android:textColor="@android:color/white"
            android:textSize="@dimen/toolbarText" />

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:civ_border_width="3dp"
                android:src="@drawable/profile"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/welcome_you_logged_in_as" />

                <TextView
                    android:id="@+id/tvUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    tools:text="Masum Abdul Matin  (masum183)" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mi_contacto_info"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:textColor="@color/design_default_color_primary_dark"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/about_us"
                    android:layout_marginLeft="5dp"/>

                <Button
                    android:id="@+id/btnAboutUs"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:text="@string/about_us"
                    android:textColor="@android:color/black"
                    android:textAllCaps="false"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sign_out_option"
                    android:layout_marginLeft="5dp"/>

                <Button
                    android:id="@+id/btnSignOut"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:text="@string/sign_out"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>